--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -140,7 +140,7 @@
                     <div class=" styling-input-list">
                         <input ng-model="trip.freightAmount" type="number" ng-change="calculateReceivleAmount()" class="form-control custom-form-control"
                             id="freightAmount">
-                        <label class="focus-effect-for-input" aria-hidden="true">Fight amount</label>
+                        <label class="focus-effect-for-input" aria-hidden="true">Freight amount</label>
 
                     </div>
                 </div>
