--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -63,7 +63,7 @@
             <td data-title="'Freight'" sortable="'freightAmount'" class="clickable-item">{{
                 trips.freightAmount | number:2 }}
             </td>
-            <td data-title="'Expanse'" class="clickable-item">{{
+            <td data-title="'Expense'" class="clickable-item">{{
                 trips.totalExpense || 0 }}
             </td>
             <td data-title="'Created By'" sortable="'createdByName'"
