--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -34,7 +34,7 @@
             <div class="form-group col-xs-12">
                 <div class="styling-input-list">
                     <input type="text" class="form-control custom-form-control" ng-model="truck.modelAndYear"/>
-                    <label class="focus-effect-for-input" aria-hidden="true">Modal and Year</label>
+                    <label class="focus-effect-for-input" aria-hidden="true">Model and Year</label>
                 </div>
             </div>
             <div class="form-group col-xs-12 ">
