--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -806,6 +806,10 @@ disabled look for disabled choices in the results dropdown
 
 .slick-list.draggable { -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 .slick-list.dragging { cursor: pointer; cursor: hand; }
+
+
+
+
 /*Common CSS*/
 .pall-zero {
     padding: 0 !important;
@@ -3216,4 +3220,23 @@ a:hover, a:focus{
 }
 .border-right{
     border-right: 1px solid #ccc;
+}
+.leftLabel{
+    width: 20%;
+    display: inline-block;
+    line-height: 100px;
+    height: 100px;
+    vertical-align: top;
+}
+.rightLabel{
+    width: 76%;
+    display: inline-block;
+}
+.rightLabel textarea{
+    min-height: 100px !important;
+    border-radius: 5px !important;
+}
+.allParties{
+    padding-left: 0px !important;
+    font-weight: bold !important;
 }
