--- a/client/views/partials/reports/receivableByPartyName.html
+++ b/client/views/partials/reports/receivableByPartyName.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getAmountsBypartyId()">
+<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getAmountsBypartyId();getAmountbyReceipts();">
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel payments" ui-sref="reports">
             <div class="reports-image">
@@ -117,7 +117,7 @@
     </div>
 
 
-    <div class="col-xs-12">
+   <!-- <div class="col-xs-12">
     <div class="main-temp col-xs-12 mt-20">
             <h3 class="db-title">Payments Receivable - {{partyName}}:</h3>
 
@@ -132,6 +132,45 @@
             </tr>
             </tfoot>
         </table>
+        </div>
+    </div>-->
+    <div class="col-xs-12 main-temp mt-20 tabs-erp">
+        <h3 class="db-title">Payments Receivable - {{partyName}}:</h3>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#freightAmount">Freight Amount</a></li>
+            <li><a data-toggle="tab" href="#receipts">Receipts</a></li>
+
+        </ul>
+        <div class="tab-content ">
+            <div id="freightAmount" class="tab-pane fade in active">
+                    <div class="main-temp col-xs-12">
+                        <table id="amountsByPartylist"
+                               class="table table-bordered table-striped table-condensed table-hover"
+                               cellspacing="0" width="100%">
+                            <tfoot>
+                            <tr>
+                                <th colspan="3">Total</th>
+                                <th>{{amountPaid.totalFreight | number:2}}</th>
+                            </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+            </div>
+            <div id="receipts" class="tab-pane fade">
+                    <div class="main-temp col-xs-12">
+                        <table id="receiptsByParty"
+                               class="display table table-bordered table-striped table-condensed table-hover"
+                               cellspacing="0" width="100%">
+                            <tfoot>
+                            <tr>
+                                <th colspan="3">Total</th>
+                                <th>{{amountPaid.totalPaid | number:2}}</th>
+                            </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+            </div>
+
         </div>
     </div>
 </div>
