--- a/client/views/partials/reports/revenueByvehicleId.html
+++ b/client/views/partials/reports/revenueByvehicleId.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getRevenueByParty();">
+<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getRevenueByParty();getexByParty();">
     <div class="col-sm-3 col-xs-12">
         <div class="reports-panel activated" ui-sref="reports">
             <div class="reports-image">
@@ -117,23 +117,43 @@
         </div>
     </div>
 
+    <div class="col-xs-12 main-temp mt-20 tabs-erp">
+        <h3 class="db-title">Revenue By Trip - {{vehicleId | uppercase}}:</h3>
+        <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#freightAmount">Freight Amount</a></li>
+            <li><a data-toggle="tab" href="#expense">Expenses</a></li>
 
-    <div class="col-xs-12">
+        </ul>
+        <div class="tab-content ">
+            <div id="freightAmount" class="tab-pane fade in active">
+                    <div class="main-temp col-xs-12">
+                        <table id="getexByParty"
+                               class="table table-bordered table-striped table-condensed table-hover"
+                               cellspacing="0" width="100%">
+                            <tfoot>
+                            <tr>
+                                <th colspan="3">Total</th>
+                                <th>{{totalRevenueByVehicleId.totalFreight | number:2}}</th>
+                            </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+            </div>
+            <div id="expense" class="tab-pane fade">
+                    <div class="main-temp col-xs-12">
+                        <table id="revenueByPartylist"
+                               class="table table-bordered table-striped table-condensed table-hover"
+                               cellspacing="0" width="100%">
+                            <tfoot>
+                            <tr>
+                                <th colspan="3">Total</th>
+                                <th>{{totalRevenueByVehicleId.totalExpenses | number:2}}</th>
+                            </tr>
+                            </tfoot>
+                        </table>
+                    </div>
+            </div>
 
-        <div class="main-temp col-xs-12 mt-20">
-            <h3 class="db-title">Revenue By Trip - {{vehicleId | uppercase}}:</h3>
-
-            <table id="revenueByPartylist"
-                   class="table table-bordered table-striped table-condensed table-hover"
-                   cellspacing="0" width="100%">
-                <tfoot>
-                <tr>
-                    <th colspan="3">Total</th>
-                    <th>{{totalRevenueByVehicleId.totalFreight | number:2}}</th>
-                    <th>{{totalRevenueByVehicleId.totalExpenses | number:2}}</th>
-                </tr>
-                </tfoot>
-            </table>
         </div>
     </div>
 </div>
