--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -104,7 +104,7 @@
 <script src="components/angular-cookies/angular-cookies.min.js"></script>
 <script src="components/angular-ui-select/dist/select.min.js"></script>
 <script src="components/underscore/underscore-min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
+<script src="components/angular-sanitize/angular-sanitize.js"></script>
 <script type="text/javascript" src="components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
 <script src="components/lightbox2/dist/js/lightbox.js"></script>
