--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -52,8 +52,8 @@
             <td data-title="'Vehicle No'" sortable="'truckName'" class="clickable-item">{{
                 maintanence.attrs.truckName}}
             </td>
-            <td data-title="'Supplier Name'" sortable="'expenseName'" class="clickable-item">{{
-                maintanence.partyId.name }}
+            <td data-title="'Supplier Name'" sortable="'expenseName'" class="clickable-item">
+                {{maintanence.partyId.name || '---' }}
             </td>
             <td data-title="'Expense Type'" sortable="'expenseName'" class="clickable-item">{{
                 maintanence.attrs.expenseName }}
