Bug fixed in Updating and Adding Trip

--- a/client/views/partials/gps/trackView.html
+++ b/client/views/partials/gps/trackView.html
@@ -40,7 +40,7 @@
                     <!--<date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="truckTrackingParams.startDate"></date-picker>-->
                     <div class="form-group">
                         <p class="input-group">
-                            <input type="text" class="form-control" datetime-picker="MM/dd/yyyy HH:mm"
+                            <input type="text" class="form-control" datetime-picker="dd-MM-yyyy HH:mm"
                                    is-open="pickerStart.open"
                                    ng-model="truckTrackingParams.startDate" datepicker-options="options"/>
                             <span class="input-group-btn">
@@ -55,7 +55,7 @@
                     <!-- <date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="truckTrackingParams.endDate"></date-picker>-->
                     <div class="form-group">
                         <p class="input-group">
-                            <input type="text" class="form-control" datetime-picker="MM/dd/yyyy HH:mm"
+                            <input type="text" class="form-control" datetime-picker="dd-MM-yyyy HH:mm"
                                    is-open="pickerEnd.open"
                                    ng-model="truckTrackingParams.endDate" datepicker-options="options"/>
                             <span class="input-group-btn">
