changed tranpoters to load owners

--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -40,11 +40,11 @@
                         <div class="sms col-xs-4">
                             <div class="radio">
                                 <label>
-                                    <input type="radio" ng-model="party.partyType" name="radio" value="Transporter">
+                                    <input type="radio" ng-model="party.partyType" name="radio" value=" Load Owner">
                                     <span class="cr">
                                         <i class="rad-icon fa fa-circle"></i>
                                     </span>
-                                    Transporter
+                                    Load Owner
                                 </label>
                             </div>
                         </div>
@@ -73,7 +73,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-xs-6" ng-show="party.partyType == 'Transporter'">
+            <div class="col-xs-12 col-xs-6" ng-show="party.partyType == 'Load Owner'">
                 <div class="col-xs-12 pall-zero">
                     <div class="form-group sms-email col-xs-12">
                         <div class="sms col-xs-6">
