--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -104,6 +104,7 @@
     <div class="modal-body">
         <div class="row" style="padding: 20px;">
             <p style="font-size: 15px;"><b>Vehicle number</b> : {{regNo | uppercase}}</p>
+            <p style="font-size: 15px;"><b>Latest Co-ordinates </b>: {{latestLocation.location.coordinates}}
             <p style="font-size: 15px;"><b>Latest Location </b>: {{latestLocation.address}}
             </p>
             <p style="font-size: 15px;"><b>Speed </b>: {{latestLocation.speed | number:0}}
