--- a/client/views/partials/gps/trackView.html
+++ b/client/views/partials/gps/trackView.html
@@ -21,6 +21,31 @@
 
                 </ul>
             </div>
+            <!-- Trigger the modal with a button -->
+            <button type="button" class="btn btn-info btn-md" data-toggle="modal" data-target="#myModal">MapType</button>
+
+            <!-- Modal -->
+            <div id="myModal" class="modal fade" role="dialog">
+                <div class="modal-dialog">
+
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" ng-click="selectMapType()">&times;</button>
+                            <h4 class="modal-title">Slect map type</h4>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <input type="radio" name="mapType" value="roadmap" ng-model="mapType"> ROADMAP<br>
+                                <input type="radio" name="mapType" value="satellite" ng-model="mapType"> SATELLITE<br>
+                                <input type="radio" name="mapType" value="terrain" ng-model="mapType"> TERRAIN<br>
+                                <input type="radio" name="mapType" value="hybrid" ng-model="mapType"> HYBRID
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
             <div class="clearfix"></div>
         </div>
         <div class="clearfix"></div>
